Bug fix: btn-circle alignment issue, issue #5

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -41,7 +41,7 @@
     font-weight: 500;
 }
 .btn.btn-circle {
-    padding: 0;
+    padding: 21px;
     border-radius: 50%;
 }
 
